syntax = "proto3";

package hextech;

option go_package = "generated/hextech"; // Ajusta la ruta aqu√≠

service Hextech {
    rpc ReceiveChanges (ChangesRequest) returns (ChangesResponse);
    rpc ReceiveFile (ReceiveFileRequest) returns (ReceiveFileResponse);
    rpc MergeChanges (MergeChangesRequest) returns (MergeChangesResponse);
}

message ChangesRequest {
    string region = 1;
    repeated int32 LocalClock = 2;
    repeated string changes = 3;
    repeated string Log = 4;
}

message ChangesResponse {
    bool acknowledged = 1;
}

message MergeChangesRequest {
    string region = 1;
    repeated int32 LocalClockA = 2;
    repeated int32 LocalClockB = 3;
    repeated string changes = 4;
    repeated string LogA = 5;
    repeated string LogB = 6;
}

message MergeChangesResponse {
    string region = 1;
    repeated int32 vector_clock = 2;
}

message ReceiveFileRequest {
    string region = 1;
    repeated int32 LocalClock = 2;
    repeated string text = 3;
}

message ReceiveFileResponse {
    string region = 1;
    repeated int32 vector_clock = 2;
}
